TestRepo2/src/objects/User_Ship_To__c.object
<CustomObject>
    <description>POS Project: junction object that represents the many-to-many relationship between Users (customers) and Ship Tos (delivery addresses)</description>
    <fields>
        <fullName>Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Magento_Ship_To_ID__c</fullName>
        <externalId>true</externalId>
        <label>Magento Ship To ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To</label>
        <referenceTo>Ship_To__c</referenceTo>
        <relationshipLabel>User Ship Tos</relationshipLabel>
        <relationshipName>User_Ship_Tos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Ship_Tos</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Ship To</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Magento_Ship_To_ID__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>User_Ship_To_and_Ship_To</fullName>
        <columns>NAME</columns>
        <columns>Ship_To__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>User Ship To and Ship To</label>
    </listViews>
    <nameField>
        <displayFormat>UST-{00000000}</displayFormat>
        <label>User Ship To ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Ship Tos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>